// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests for <GifExpertApp /> component It should render <GifExpertApp /> correctly 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Tests for <GifExpertApp /> component It should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Batman"
      key="Batman"
    />
    <GifGrid
      category="Superman"
      key="Superman"
    />
  </ol>
</Fragment>
`;
